<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <mc.version>1.19</mc.version>                                                   <!-- default mc version -->
        <plugins.dir>${project.basedir}/out</plugins.dir>                               <!-- default output dir -->
        <file.name>${project.artifactId}-${mc.version}-${project.version}</file.name>   <!-- archived file name -->
    </properties>

    <groupId>azalealibrary</groupId>
    <artifactId>azaleacore</artifactId>
    <version>1.0-SNAPSHOT</version>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- spigot api -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${mc.version}-R0.1-SNAPSHOT</version>
        </dependency>
        <!-- plugin annotations -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>plugin-annotations</artifactId>
            <version>1.2.3-SNAPSHOT</version>
        </dependency>
        <!-- mockbukkit -->
        <dependency>
            <groupId>com.github.seeseemelk</groupId>
            <artifactId>MockBukkit-v1.19</artifactId>
            <version>2.133.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>${project.artifactId}</name>
            <url>https://maven.pkg.github.com/${project.groupId}/${project.artifactId}</url>
        </repository>
    </distributionManagement>

    <build>
        <finalName>${file.name}</finalName>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
            </plugin>
            <plugin>
                <groupId>com.coderplus.maven.plugins</groupId>
                <artifactId>copy-rename-maven-plugin</artifactId>
                <version>1.0.1</version>
                <executions>
                    <!-- comment out before doing manual deployment -->
                    <execution>
                        <id>rename-file</id>
                        <phase>package</phase>
                        <goals>
                            <goal>rename</goal>
                        </goals>
                        <configuration>
                            <sourceFile>${project.basedir}/target/${file.name}.jar</sourceFile>
                            <destinationFile>${plugins.dir}/${file.name}.jar</destinationFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>